# cpl-sdk

./: .gitignore  .pylintrc  README.md  pyproject.toml
cpl/: __init__.py  client.py  constants.py  exceptions.py  logger.py  types.py
